<resources>
    <string name="app_name">Tetris</string>
    <string name="tetris">TETRIS</string>
    <string name="high_score_default">High score: </string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>
    <string name="btn_reset">Reset</string>
    <string name="current_score">current score</string>
    <string name="high_score">high score</string>
</resources>